examples/fail/lexer/single_ampersand.bina
// EXPECT_LEXER_ERROR: unexpected character '&'
fn main() -> int {
    let x = true & false;
    return 0;
}
